--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "author": {
     "name": "Ben Straub",
-    "email": "ben@straub.cc",
+    "email": "ben@straub.cc"
   },
   "license": "MIT",
   "bugs": {
