--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hubot integration with Semaphore (semaphoreapp.com)",
   "main": "index.coffee",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers coffee:coffee-script/register test/*_spec*"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,15 @@
   "bugs": {
     "url": "https://github.com/ben/hubot-semaphoreapp/issues"
   },
-  "homepage": "https://github.com/ben/hubot-semaphoreapp"
+  "homepage": "https://github.com/ben/hubot-semaphoreapp",
+  "devDependencies": {
+    "chai": "^1.10.0",
+    "hubot": "^2.9.3",
+    "hubot-mock-adapter": "^1.0.0",
+    "mocha": "^2.0.1",
+    "nock": "^0.51.0"
+  },
+  "dependencies": {
+    "coffee-script": "^1.8.0"
+  }
 }
